Fixed parallax header on mobile #5

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,7 +37,7 @@ p {
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url(../assets/img/loft-narrow.jpg);
-    max-width: 100vp;
+    max-width: 100vw;
 }
 
 /* Header scroll down button */
